Jsoup added to the library with example